# Axel

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE.txt  Makefile  README.md  Xargo.toml  axel.iso  globals.mk  graphic_txt.c  kernel.c  rustfmt.toml  string.c
asm_functions/: Makefile  functions.asm
boot/: Makefile  grub.cfg  multiboot.asm
config/: Makefile.arm11  Makefile.x86_32  Makefile.x86_64  axel.gdb  grub.cfg  i386-unknown-axel.json  x86_64-unknown-axel.json
include/: asm_functions.h  asm_interrupt_handler.asm  graphic_txt.h  kernel.h  multiboot_constants.h  multiboot_structs.h  string.h
legacy/: Makefile  README.md  elist.c  memory.c  proc.c  user_init.asm  user_main.c
legacy/dev/: acpi.c  ata.c
legacy/include/: graphic_txt.h  macros.h  rgb8.h  time.h
lib/kernel_memory_allocator/: Cargo.toml
lib/rust-core/: Cargo.toml
src/: .gdbinit  .gitignore  Makefile  Makefile.arm11  Makefile.common  Makefile.x86_32  NOTE.txt  TODO.txt  aapi.c  acpi.c  alist.rs  aqueue.c  arm-unknown-none-eabi.json  arm-unknown-none-eabihf.json  asm_functions.asm  asm_interrupt_handler.asm  axel_context.rs  bochsrc  buddy.c  bytes.rs  context.rs  dlist.c  doubly_linked_list.c  elf.c  elist.c  exception.c  fat.c  fat_manip.c  font.c  fs.c  globals.mk  graphic.c  graphic.rs  graphic_txt.c  graphic_vbe.c  i386-unknown-none-gnu.json  init.asm  interrupt.c  interrupt_asm.asm  interrupt_handler.c  (+28 more)
src/arch/: mod.rs
src/boot/: Makefile  grub.cfg  loader1.asm  loader2.asm  loader2.c  loader2.ld  loader_common.inc  multiboot.asm
src/dev/: acpi.c  ata.c  ide.c  pci.c  ps2.c
src/include/: aapi.h  acpi.h  aqueue.h  asm_functions.h  assert.c  assert.h  atype.h  buddy.h  dlist.h  doubly_linked_list.h  drawable.h  elf.h  elist.h  exception.h  fat.h  fat_manip.h  flag.h  font.h  fs.h  graphic.h  (+34 more)
(+104 files in other folders)
