[package]
name    = "axel"
version = "0.2.0"
authors = ["mopp <hello@mopp.jp>"]


[lib]
crate-type = ["staticlib"]
path = "src/kernel.rs"


[dependencies]
bitflags = "1.0"
intrusive-collections = {version = "0.7", features = ["nightly", "alloc"]}
lazy_static = {version = "1.1", features = ["spin_no_std"]}
multiboot2 = {git = "https://github.com/phil-opp/multiboot2-elf64.git"}
rlibc = "1.0"
spin = "0.4.9"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
