[package]
name    = "axel"
version = "0.2.0"
authors = ["mopp <hello@mopp.jp>"]
edition = "2018"


[lib]
crate-type = ["staticlib"]
path = "src/kernel.rs"


[dependencies]
bitflags = "1.0"
failure = {version = "0.1", features = ["failure_derive"], default-features = false}
intrusive-collections = {version = "0.7", features = ["nightly", "alloc"]}
lazy_static = {version = "1.2", features = ["spin_no_std"]}
multiboot2 = {git = "https://github.com/phil-opp/multiboot2-elf64.git"}
rlibc = "1.0"
spin = "0.5"
static_assertions = {version = "0.3", features = ["nightly"]}
bitfield = "0.13"
x86_64 = "0.4"


[profile.dev]
panic = "abort"


[profile.release]
panic = "abort"
